--- a/movingsensors/css/main.css
+++ b/movingsensors/css/main.css
@@ -218,8 +218,10 @@ body {
   font-feature-settings: "kern", "liga", "frac", "pnum";
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
-  background-color: #22272a;
-  color: #ced9e0;
+  //background-color: #22272a;
+  //background-color: #fff;
+  //color: #ced9e0;
+  color: #082f51;
   font-family: "font-family: " Helvetica Neue ",Helvetica,Arial,sans-serif";
   font-size: 1em;
   line-height: 1.5;
@@ -327,7 +329,7 @@ a {
 }
 
 a:hover {
-  color: #e85151;
+  color: #B98907;
 }
 
 header {
@@ -335,7 +337,7 @@ header {
   margin-left: auto;
   margin-right: auto;
   margin-top: 4em;
-  border-top: 2px solid #e85151;
+  border-top: 2px solid #B98907;
   opacity: 0;
   -webkit-transform: translateY(50px);
   -moz-transform: translateY(50px);
@@ -388,12 +390,12 @@ header #logo-container #logo {
   float: none;
 }
 header #logo-container #subtitle {
-  color: #e85151;
+  color: #B98907;
   font-weight: bold;
   font-size: 18px;
 }
 header a {
-  color: #e85151;
+  color: #B98907;
   text-decoration: none;
   border: none;
 }
@@ -450,7 +452,7 @@ header nav ul li a.bordered {
   padding: 0.4em;
   padding-left: 0.8em;
   padding-right: 0.8em;
-  border: 2px solid #e85151;
+  border: 2px solid #B98907;
 }
 
 #content {
@@ -532,10 +534,15 @@ header nav ul li a.bordered {
   clear: both;
 }
 #content section.row h2 {
-  text-transform: uppercase;
   font-size: 1.0em;
   font-weight: bold;
-  color: #e85151;
+  color: #B98907;
+  margin-bottom: 0.05em;
+}
+#content section.row h1 {
+  font-size: 2.0em;
+  font-weight: bold;
+  color: #B98907;
   margin-bottom: 0.05em;
 }
 #content section.row p {
