--- a/movingsensors/css/main.css
+++ b/movingsensors/css/main.css
@@ -272,7 +272,7 @@ a {
   -webkit-transition: color 0.1s linear;
   -moz-transition: color 0.1s linear;
   transition: color 0.1s linear;
-  color: #ced9e0;
+  color: #082f51;
   text-decoration: none !important;
 }
 a:hover {
