--- a/movingsensors/css/main.css
+++ b/movingsensors/css/main.css
@@ -48,6 +48,10 @@ html, button, input, select, textarea {
   font-family: sans-serif;
 }
 
+ul {
+  list-style-type: none;
+}
+
 a:focus {
   outline: thin dotted;
   outline: 5px auto -webkit-focus-ring-color;
