--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,18 @@
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
         <ul class="list-inline text-center footer-links">
-          {% if site.author.facebook and site.footer-links-active.facebook %}
+          <li>
+          <a href="http://roboticvision.org/"> <img height=70px src="{{ site.baseurl}}/img/robotvision.png" /> </a>
+          </li>
+          <li>
+          <a href="http://blogs.adelaide.edu.au/acvt/"> <img height=60px src="{{ site.baseurl}}/img/UA.png" /></a>
+          </li>
+          <li>
+          <a href="http://robots.unizar.es/"><img height=70px src="{{ site.baseurl}}/img/grtr.png" /></a>
+          </li>
+        </ul>
+        <ul class="list-inline text-center footer-links">
+        {% if site.author.facebook and site.footer-links-active.facebook %}
           <li>
             <a href="https://www.facebook.com/{{ site.author.facebook }}" title="Facebook">
               <span class="fa-stack fa-lg">
